--- a/readme.org
+++ b/readme.org
@@ -2,10 +2,15 @@
 
 
 * [[http://www.cs.ru.nl/~W.Swierstra/Publications/DataTypesALaCarte.pdf][Data types a` la carte]]
+When I looked into Effect work, lots of them references this Data types a la
+carte paper.
 
-* TODO explain the experssion problem
+https://hackage.haskell.org/package/data-fix-0.2.1/docs/Data-Fix.html
+https://en.wikibooks.org/wiki/Haskell/Fix_and_recursion#Recursion
 
-* Fixing the expression problem
+** TODO explain the experssion problem
+
+** Fixing the expression problem
 
 Parameterize the experession data type
 
@@ -28,8 +33,8 @@ data CoProduct f g e = Inl (f e) | Inr (g e)
 #+end_src
 kind of ~f~ and ~g~ is ~*->*~
 
-** TODO proof ~CoProduct Val Add~ is the orignal ~Expr~.
-** TODO find the definition of `injection`
+*** TODO proof ~CoProduct Val Add~ is the orignal ~Expr~.
+*** TODO find the definition of `injection`
 
 https://mathworld.wolfram.com/Injection.html
 
@@ -171,7 +176,7 @@ main = print $ pretty x
        x = val 80  ⊗ val 5 ⊕ val 4
 #+end_src
 
-** TypeOperators
+*** TypeOperators
  https://typeclasses.com/ghc/type-operators
 
 * [[https://skillsmatter.com/skillscasts/14349-the-scope-of-algebraic-effects?utm_medium=social&utm_source=twitter&utm_campaign=7be06e&utm_content=haskellx][The Scope of algebraic effects]]
@@ -485,6 +490,7 @@ main = runTeletypeInIO echo
 ** TODO verify the functor/applicative/moand implement is correct
 ** TODO benchmark ??
 ** TODO checkout [[https://hackage.haskell.org/package/free-5.0.2/docs/Control-Monad-Free.html][Control-Monad-Free]]
+** `lift` and `foldFree`
 * References
 - https://github.com/polysemy-research/polysemy
 - https://www.youtube.com/watch?v=-dHFOjcK6pA
